--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,4 +12,4 @@ html
       .main-content
         block content
     footer
-      p Running on node with Express, Jade and Stylus
+      p Uqido srl
