--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title #{title} | Uqido
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     script(src='/javascripts/jquery-1.11.1.min.js', type='text/javascript')
     script(src='/javascripts/drive_control.js', type='text/javascript')
     script(src='/javascripts/mjpg_stream.js', type='text/javascript')
