--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -18,7 +18,7 @@ font-family                   = Helvetica, sans-serif
     position: absolute;
     width: 100%;
     height: 100%;  
-    background-color: grey;
+    background-color: black;
 
     p 
       color: white;
@@ -46,19 +46,16 @@ font-family                   = Helvetica, sans-serif
       height: 80px;
       display: block;
       background-color: keyboard-button-color;
-
       font-size: 50px;
       text-decoration: none;
       text-transform: uppercase;
       line-height: 1.7;
       text-align: center;
       color: keyboard-button-font-color;
-
       border: 1px solid rgba(0,0,0,0.05);
-
       font-family: font-family;
-
       position: absolute;
+      opacity 0.5
     
 
     .button.w 
@@ -105,6 +102,10 @@ font-family                   = Helvetica, sans-serif
     .keyboard 
       .button
         border-radius 100%;
+
+    .video_stream
+      img
+        height auto
 
   .presentation
     position absolute
