--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -100,6 +100,7 @@ font-family                   = Helvetica, sans-serif
     z-index 10
 
     .keyboard 
+      position fixed
       .button
         border-radius 100%;
 
