--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #808080;
+  background-color: #000;
 }
 .control_panel .placeholder p {
   color: #fff;
@@ -20,8 +20,10 @@
   background-color: rgba(0,0,0,0.5);
 }
 .control_panel .video_stream img {
+  position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 10;
 }
 .control_panel .keyboard {
   width: 252px;
@@ -45,6 +47,7 @@
   border: 1px solid rgba(0,0,0,0.05);
   font-family: Helvetica, sans-serif;
   position: absolute;
+  opacity: 0.5;
 }
 .control_panel .keyboard .button.w {
   left: 85px;
@@ -86,8 +89,14 @@
     height: 100%;
     z-index: 10;
   }
+  .control_panel .keyboard {
+    position: fixed;
+  }
   .control_panel .keyboard .button {
     border-radius: 100%;
+  }
+  .control_panel .video_stream img {
+    height: auto;
   }
   .presentation {
     position: absolute;
