--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -30,8 +30,10 @@ font-family                   = Helvetica, sans-serif
     background-color: rgba(0,0,0,0.5);
 
     img 
+      position absolute
       width: 100%;
       height: 100%;  
+      z-index 10
     
   .keyboard 
     width: 252px;
