--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -107,6 +107,7 @@ font-family                   = Helvetica, sans-serif
       right auto
       .button
         border-radius 100%;
+        line-height 1.5
       .button.w
         left 20px
       .button.s
