--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     script(src='/javascripts/jquery-1.11.1.min.js', type='text/javascript')
     script(src='/javascripts/drive_control.js', type='text/javascript')
-    //- script(src='/javascripts/mjpg_stream.js', type='text/javascript')
+    script(src='/javascripts/mjpg_stream.js', type='text/javascript')
   body
     header
     .container
