--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,6 +109,9 @@
     height: 100%;
     z-index: 10;
   }
+  .control_panel .menu .button {
+    position: fixed;
+  }
   .control_panel .keyboard {
     position: fixed;
     width: 100%;
