--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -118,6 +118,11 @@ font-family                   = Helvetica, sans-serif
     height 100%  
     z-index 10
 
+
+    .menu
+      .button
+        position fixed
+
     .keyboard 
       position fixed
       width 100%
